--- a/Practicas/practica3/FrontEnd/index.html
+++ b/Practicas/practica3/FrontEnd/index.html
@@ -20,35 +20,38 @@
                 display: flex !important;
             }
         </style>
-        <div class="carousel carousel-slider center" data-indicators="true">
-            <div class="carousel-item purple white-text valign-wrapper" href="#one!">
-                <form id="formulario" action="http://localhost:4000/file" method="POST" enctype="multipart/form-data" style="width:50%; margin-left: 25%">
-                    <h2>Distribute</h2>
-                    <div class="file-field input-field">
-                        <div class="btn">
-                            <i class="material-icons">attach_file</i>
-                            <input id="fileInput" type="file" name="file">
-                        </div>
-                        <div class="file-path-wrapper">
-                            <input class="file-path validate" type="text">
-                        </div>
+        <div class="gray black-text center">
+            <form id="formulario" action="http://localhost:4000/file" method="POST" enctype="multipart/form-data" style="width:50%; margin-left: 25%">
+                <h2>Distribute</h2>
+                <div class="file-field input-field">
+                    <div class="btn">
+                        <i class="material-icons">attach_file</i>
+                        <input id="fileInput" type="file" name="file">
                     </div>
-                    <button class="btn waves-effect waves-light" type="submit" name="action">SEND
-                        <i class="material-icons right">send</i>
-                    </button>
-                </form>
-            </div>
-            <div class="carousel-item amber white-text" href="#two!">
-                <h2>Retrieve</h2>
-                <a id="downloadbutton" href="http://localhost:4000/file" class="btn waves-effect waves-light" download="">Download
-                    <i class="material-icons right">file_download</i>
-                </a>
-            </div>
+                    <div class="file-path-wrapper">
+                        <input class="file-path validate" type="text">
+                    </div>
+                </div>
+                <button class="btn waves-effect waves-light" type="submit" name="action">SEND
+                    <i class="material-icons right">send</i>
+                </button>
+            </form>
+            <h2>Retrieve</h2>
+            <button id="downloadButton" href="http://localhost:4000/file" class="btn waves-effect waves-light" download="">Download
+                <i class="material-icons right">file_download</i>
+            </button>
         </div>
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="js/materialize.min.js"></script>
         <script>
                 $('.carousel.carousel-slider').carousel({fullWidth: true});
+                $(document).ready(function(){
+
+                    $('#downloadButton').click(function(e) {  
+                        var inputvalue = $("#fileInput").val();
+                        window.location.href = "http://localhost:4000/file/"+inputvalue.substring(12);
+                    });
+                });
         </script>
     </body>
 </html>
